# waypoint_navigation

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.xml
.cargo/: config.toml
.github/: ros2_rust_install_script.sh
.github/workflows/: build-test.yaml
config/: waypoint.yaml
launch/: waypoint_navigation.launch.py
src/: action_client.rs  lib.rs  main.rs  send_goal.rs  waypoint.rs  waypoint_server.rs  yaml_parser.rs
