[package]
name = "waypoint_navigation"
version = "0.0.0"
edition = "2021"

[package.metadata.ros]
install_to_share = ["config"]

[profile.colcon]
inherits = "release"

[dependencies]
async-std = "1"
colored = "1.9" 
futures = "0.3.15"
r2r = "0.7.0"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4"
